Parcial06 - Add get message for member
