# src/API/Controllers/MessagesController.cs
@@ -1,6 +1,7 @@
 using API.DTOs;
 using API.Entities;
 using API.Extensions;
+using API.Helpers;
 using API.Interfaces;
 using API.Mappers;
 using Microsoft.AspNetCore.Mvc;
@@ -37,5 +38,15 @@ public class MessagesController(
         }
 
         return BadRequest("Failed to send the message");
+    }
+
+    [HttpGet]
+    public async Task<ActionResult<PaginationResult<MessageResponse>>> GetMessagesByContainer(
+        [FromBody] MessageParams messageParams
+    )
+    {
+        messageParams.MemberId = User.GetMemberId();
+
+        return await messagesRepository.GetForMember(messageParams);
     }
 }
