# src/API/Data/MessagesRepository.cs
@@ -2,6 +2,7 @@ using API.DTOs;
 using API.Entities;
 using API.Helpers;
 using API.Interfaces;
+using API.Mappers;
 
 namespace API.Data;
 
@@ -13,9 +14,21 @@ public class MessagesRepository(AppDbContext context) : IMessagesRepository
 
     public async Task<Message?> Get(string messageId) => await context.Messages.FindAsync(messageId);
 
-    public async Task<PaginationResult<MessageResponse>> GetForMember()
+    public async Task<PaginationResult<MessageResponse>> GetForMember(MessageParams messageParams)
     {
-        throw new NotImplementedException();
+        var query = context.Messages
+            .OrderByDescending(m => m.MessageSent)
+            .AsQueryable();
+
+        query = messageParams.Container switch
+        {
+            ContainerTypes.Outbox => query.Where(m => m.SenderId == messageParams.MemberId),
+            _ => query.Where(m => m.RecipientId == messageParams.MemberId)
+        };
+
+        var messageQuery = query.Select(MessageMapper.ToResponseProjection());
+
+        return await Pagination.CreateAsync(messageQuery, messageParams.PageNumber, messageParams.PageSize);
     }
 
     public async Task<IReadOnlyList<MessageResponse>> GetThread(string currentMemberId, string recipientId)
