# src/API/Helpers/MessageParams.cs
@@ -1,0 +1,18 @@
+using System.ComponentModel.DataAnnotations;
+
+namespace API.Helpers;
+
+public class MessageParams : PaginationRequest
+{
+    public string? MemberId { get; set; }
+
+    [Required]
+    [EnumDataType(typeof(ContainerTypes))]
+    public required ContainerTypes Container { get; set; }
+}
+
+public enum ContainerTypes
+{
+    Inbox,
+    Outbox
+}
