# src/API/Interfaces/IMessagesRepository.cs
@@ -9,7 +9,7 @@ public interface IMessagesRepository
     void Add(Message message);
     void Delete(Message message);
     Task<Message?> Get(string messageId);
-    Task<PaginationResult<MessageResponse>> GetForMember();
+    Task<PaginationResult<MessageResponse>> GetForMember(MessageParams messageRequest);
     Task<IReadOnlyList<MessageResponse>> GetThread(string currentMemberId, string recipientId);
     Task<bool> SaveAllAsync();
 }
